# aoc2022

./: .gitignore  CMakeLists.txt
lib/aoc/: CMakeLists.txt  aoc.cpp  aoc.h
src/1/: CMakeLists.txt  day1.cpp
src/day_01/: CMakeLists.txt  day_01.cpp
src/day_02/: CMakeLists.txt  day_02.cpp
src/day_03/: CMakeLists.txt  day_03.cpp
src/day_04/: CMakeLists.txt  day_04.cpp
src/day_05/: CMakeLists.txt  day_05.cpp  i
src/day_06/: CMakeLists.txt  day_06.cpp
src/day_07/: CMakeLists.txt  day_07.cpp  day_07.h
src/day_08/: CMakeLists.txt  day_08.cpp  day_08.h
